# Anticip8

./: anticip8_prefetch_test.http  anticip8_test.http  docker-compose.yml
analytics/: Dockerfile  main.py  requirements.txt
core/: Dockerfile  go.mod  go.sum  requirements.txt
core/app/: main.go  main.py
core/recomender/: train_item2vec.py
grafana/dashboards/: anticip8.json
grafana/provisioning/dashboards/: dashboards.yml
locust/: Dockerfile  locustfile.py
prometheus/: prometheus.yml
sdk/: pyproject.toml
sdk/anticip8_sdk/: __init__.py  cache.py  chainlog.py  client.py  metrics.py  middleware.py
services/options_api/: Dockerfile
services/options_api/app/: main.py
services/options_api_baseline/: Dockerfile  requirements.txt
services/options_api_baseline/app/: cache.py  main.py
services/orders_api/: Dockerfile  requirements.txt
services/orders_api/app/: main.py
services/orders_api_baseline/: Dockerfile
services/orders_api_baseline/app/: main.py
