[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anticip8-sdk"
version = "0.1.0"
description = "Anticip8 agent SDK for FastAPI"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "starlette>=0.37","prometheus-client==0.20.0","redis==5.0.8"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["anticip8_sdk*"]
